force-app/main/default/objects/Review__c/fields/Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Comments__c</fullName>
    <label>Reviewer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>